[package]
name = "trace-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.5"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.2.0", features = ["trace"] }
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", features = ["env-filter", "time","local-time",]}
tracing-appender = "0.2"

# time = { version = "0.3.7", features = ["formatting", "macros"] }

time = { version = "0.3.7", features = ["macros"] }
